manifests/cilium-gateway-api-demo/manifests/04-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 30080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
