manifests/cilium-gateway-api-demo/manifests/05-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-httproute
  namespace: demo-app
spec:
  parentRefs:
    - name: cilium
      namespace: default
  rules:
    # Default traffic: 80% v1 / 20% v2
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: x-demo-header
                value: added-by-gateway-api
      backendRefs:
        - name: app-service-v1
          port: 80
          weight: 80
        - name: app-service-v2
          port: 80
          weight: 20

    # Canary in case of X-Canary header
    - matches:
        - path:
            type: PathPrefix
            value: /
          headers:
            - name: X-Canary
              type: Exact
              value: "true"
      backendRefs:
        - name: app-service-v2
          port: 80
          weight: 100

    # Echo in case of X-Echo header with RequestHeaderModifier
    - matches:
        - path:
            type: PathPrefix
            value: /
          headers:
            - name: X-Echo
              type: Exact
              value: "true"
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: added-demo-header
                value: added-by-gateway-api
              - name: x-forwarded-for
                value: 1.0.0.1
      backendRefs:
        - name: echo-server
          port: 80
          weight: 100
